# File-Exploder

./: .gitignore  CMakeLists.txt
src/: core.asm  main.cpp  utils.c
src/sys/: FileSystem.cpp  FileSystem.h  History.cpp  History.h
src/ui/: FileList.cpp  FileList.h  MainWindow.cpp  MainWindow.h
